bdr.BDR.scala.error
Erreur de compilation :
BDR:6: error: not found: value Z
   }else if (litMessage==Z){
                         ^